apps/ip-speed/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-speed
  namespace: ip-speed
spec:
  type: ClusterIP
  selector:
    app: ip-speed
  ports:
    - name: http
      port: 80
      targetPort: 18966
