apps/ip-speed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-speed
  namespace: ip-speed
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.1.0/24,100.64.0.0/10,10.42.0.0/16"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ip-speed.enigmata.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ip-speed
                port:
                  number: 80
